# rag_eval_units

./: .gitignore  README.md  display_md.py  pages_cleaner.py  questions.txt  requirements.txt  scrape_urls.py  urls.txt
rag_eval/: README.md  comparison_study copy.ipynb  comparison_study.ipynb  eval_perplexity.py  evals.py  litellm_config.yaml  pyproject.toml  questions_answares.py
rag_eval/evals/: perplexity_results.csv
rag_eval/evals/datasets/: test_dataset.csv
rag_eval/evals/experiments/: brave_torvalds.csv  busy_berners_lee.csv  clever_curry.csv  crazy_bezos.csv  distracted_cerf.csv  distracted_perlis.csv  from_index_markdown_and_sentence_1024_k_3_results.csv  from_index_markdown_and_sentence_1024_k_4_results.csv  from_index_markdown_and_sentence_1024_k_5_results.csv  from_index_markdown_and_sentence_1024_k_6_results.csv  from_index_markdown_and_sentence_512_k_3_results.csv  from_index_markdown_and_sentence_512_k_4_results.csv  from_index_markdown_and_sentence_512_k_5_results.csv  from_index_markdown_and_sentence_512_k_6_results.csv  from_index_markdown_and_sentence_big_512_k_5_results.csv  from_index_markdown_and_sentence_big_results_complete.csv  from_index_markdown_and_sentence_results.csv  from_index_markdown_big_k_3_results.csv  from_index_markdown_chunking_big_results.csv  from_index_markdown_chunking_results.csv  from_index_markdown_k_3_results.csv  from_index_markdown_k_4_results.csv  from_index_markdown_k_5_results.csv  from_index_markdown_k_6_results.csv  (+24 more)
rag_eval/rag_eval.egg-info/: PKG-INFO  requires.txt
rag_eval/rag_index/: chroma.sqlite3
(+66 files in other folders)
