[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG evaluation example using Ragas"
requires-python = ">=3.11"
dependencies = [
    "ragas[all]>=0.3.0",
    "openai>=1.0.0",
    "llama-index-core>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-llms-openai-like>=0.1.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = []

[tool.uv]
managed = true
# Note: When developing locally, use:
# uv sync --override ragas@path/to/ragas